# mujoco-go2-wbc-mpc

./: .gitignore  .gitmodules  README.md  requirements.txt
cpp/: CMakeLists.txt  README.md
cpp/apps/: inspect_dynamics.cpp  run_trot_rollout.cpp  solve_mpc_once.cpp  solve_wbc_once.cpp
cpp/include/go2wbc/: CentroidalMpc.hpp  GeneralContactWbc.hpp  MujocoModelInterface.hpp  OsqpSolver.hpp  Types.hpp  WbcTypes.hpp
cpp/src/: CentroidalMpc.cpp  GeneralContactWbc.cpp  MujocoModelInterface.cpp  OsqpSolver.cpp
docs/: control_stack.md  cpp_single_file_reading_pack.md  external_reference_sources.md  locomotion_reference_map.md  mainline_architecture.md  project_structure.md  python_code_reading_guide.md
models/: free_body_smoke.xml
scripts/: check_mujoco_install.py  debug_trot_headless.py  inspect_contact_schedule.py  inspect_crawl_planner.py  inspect_external_reference_modes.py  inspect_frame_conventions.py  inspect_go2_dynamics.py  launch_go2_viewer.py  record_trot_demo.py  render_cpp_rollout_gif.py  run_centroidal_mpc_horizon_once.py  run_centroidal_mpc_once.py  run_centroidal_to_wbc_once.py  run_commanded_crawl_viewer.py  run_horizon_mpc_to_wbc_once.py  run_single_leg_forward_step_viewer.py  run_single_leg_swing_once.py  run_single_leg_swing_viewer.py  run_srb_mpc_crawl_continuous_viewer.py  run_srb_mpc_crawl_forward_viewer.py  run_srb_mpc_crawl_viewer.py  run_srb_mpc_forward_step_viewer.py  run_static_stance_once.py  run_static_stance_viewer.py  run_step_sequence_viewer.py  run_trot_reference_viewer.py  simulate_single_leg_forward_step.py  simulate_single_leg_swing.py  simulate_srb_mpc_crawl.py  simulate_srb_mpc_crawl_continuous.py  simulate_srb_mpc_crawl_forward.py  simulate_srb_mpc_forward_step.py  simulate_static_stance.py  simulate_step_sequence.py  validate_control_stack.py
src/mujoco_wbc/: __init__.py  centroidal_mpc.py  contact_schedule.py  contact_transition.py  conventions.py  model_interface.py  planning.py  profiling.py  reference_inputs.py  support_polygon.py  swing_trajectory.py  wbc_qp.py
